--- a/src/OPME.StockManagement.WebAPI/Views/_ViewImports.cshtml
+++ b/src/OPME.StockManagement.WebAPI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using OPME.StockManagement.WebAPI
+@using OPME.StockManagement.WebAPI.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
