--- a/src/OPME.StockManagement.WebAPI/Views/Shared/_Layout.cshtml
+++ b/src/OPME.StockManagement.WebAPI/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow-sm">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold" asp-area="" asp-controller="Home" asp-action="Index">
                     <i class="bi bi-box-seam me-2"></i>OPME Stock Management
